# smart-space

smart estate space/: Cargo.toml  carnister.docx  main.rs
