[package]
name = "smart_estate_space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk ="0.13.1"
derive_more = "0.99.16"
serde_derive = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
ic-cdk-macros = "0.9.0"
candid = "0.10.5"
async-std = "1.9.0"
futures = "0.3.21"
reqwest ="0.11.11"

